# gaze-guided-scene

./: .env.example  .gitignore  LICENSE  README.md  build_graphs_pipeline.md  conftest.py  hands.ipynb  logger.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup_env.sh  visualize_gaze.py
config/: config_utils.py  default_config.yaml  euler_cluster_config.yaml  student_cluster_config.yaml
datasets/: build_dataset.py  build_graph.py  build_graphs.py  dataset-yolo-world-gaze-noise-reduction.pth  dataset_yolo_conf=0.35_iou=0.7_gaze-noise-filtering=false.pth  example_dataloader.py  full_labels_S1.pth  model_ready_dataset.py
egtea_gaze/: setup_scratch.py  utils.py
figures/: build-graphs-pipeline.md  graph-construction-overview.md  heterogeneous-graph.md
graph/: README.md  __init__.py  action_utils.py  build_graph.py  build_graphs.py  checkpoint_manager.py  edge.py  gaze.py  graph.py  graph_builder.py  graph_processor.py  graph_tracer.py  io.py  node.py  object_detection.py  record.py  utils.py  visualizer.py
models/: __init__.py  clip.py  onnx_utils.py  yolo_world.py
scripts/: convert_graphs.py  dataset_alignment.py  dataset_analysis.py  dataset_to_csv.py  export_mermaid_diagrams.py  export_mermaid_pdfs.py  extend_action_mapping.py  find_videos_by_action_suffix.py  inspect_dataset.py  parse_splits.py  remap_action_ids.py  run.sh  run_build.sh  run_tests.sh  run_train.sh  setup_env.sh  setup_euler_cluster_env.sh  setup_scratch.py  setup_student_cluster_env.sh  visualize_gaze.py  yolo-world-custom-classes.py
tasks/: __init__.py  base_task.py  (+2 more)
(+277 files in other folders)
